--- a/templates/contacts/list_contacts.html
+++ b/templates/contacts/list_contacts.html
@@ -17,7 +17,8 @@
         {% if contact.address_2 %}
           {{ contact.address_2 }}<br />
         {% endif %}
-        {{ contact.city }}, {{ contact.state }} {{ contact.zip_code }}
+        {{ contact.city }}, {{ contact.state }} 
+        { contact.zip_code }}
       </div>
     </div>
 
@@ -34,6 +35,17 @@
       <div>{{ contact.email }}</div>
     </div>
     {% endif %}
+
+    {% if contact.birthday %}
+    <div class="flex">
+      <div class="pr2"><i class="icofont-ui-birthday"></i></div>
+      <div>{{ contact.birthday }}</div>
+    </div>
+    {% endif %}
+
+
+
+    }
 
     <p>
       <a href="{% url 'edit_contact' pk=contact.pk %}">Edit Contact</a><br>    
